--- a/templates/index.html
+++ b/templates/index.html
@@ -3,6 +3,8 @@
 
 <head>
   <title>Etusivu</title>
+  <meta name='viewport' content='width=device-width, initial-scale=1'>
+  <link rel='stylesheet' type='text/css' href='static/style.css'>
 </head>
 
 <body>
