--- a/templates/login.html
+++ b/templates/login.html
@@ -3,6 +3,8 @@
 
 <head>
   <title>Kirjaudu sisään</title>
+  <meta name='viewport' content='width=device-width, initial-scale=1'>
+  <link rel='stylesheet' type='text/css' href='static/style.css'>
 </head>
 
 <body>
@@ -16,6 +18,7 @@
     <br>
     <input type="submit" value='Kirjaudu'>
   </form>
+  <a href="/signup">Luo tunnus</a>
 </body>
 
 </html>
