refactoring app.py to several modules

--- a/templates/signup.html
+++ b/templates/signup.html
@@ -9,7 +9,7 @@
 
 <body>
   <h1>Luo käyttäjätunnus</h1>
-  <form action='/signup_handler' method='POST'>
+  <form action='/signup' method='POST'>
     <label for="firstname">Etunimi:</label>
     <input type='text' name='firstname' placeholder='Etunimi' id='firstname' required>
     <br>
