--- a/templates/login.html
+++ b/templates/login.html
@@ -9,7 +9,7 @@
 
 <body>
   <h1>Kirjaudu sisään</h1>
-  <form action='/login_handler' method='POST'>
+  <form action='/login' method='POST'>
     <label for="username">Käyttäjätunnus:</label>
     <input type='text' name='username' id='username'>
     <br>
