--- a/templates/login.html
+++ b/templates/login.html
@@ -8,6 +8,7 @@
 </head>
 
 <body>
+  <a href="/">Etusivu</a>
   <h1>Kirjaudu sisään</h1>
   <form action='/login' method='POST'>
     <label for="username">Käyttäjätunnus:</label>
