--- a/templates/signup.html
+++ b/templates/signup.html
@@ -8,6 +8,7 @@
 </head>
 
 <body>
+  <a href="/">Etusivu</a>
   <h1>Luo käyttäjätunnus</h1>
   <form action='/signup' method='POST'>
     <label for="firstname">Etunimi:</label>
