--- a/templates/index.html
+++ b/templates/index.html
@@ -9,25 +9,31 @@
 
 <body>
   <h1>Pöytävaraus</h1>
-  {% if session.user %}
+  {% if session.user_id %}
   <h2>Tervetuloa, {{ session.username }}</h2>
+  <a href="/logout">Kirjaudu ulos</a>
+  {% else %}
+  <a href='/login'>Kirjaudu sisään</a>
+  <br>
+  <a href='/signup'>Luo tunnus</a>
+  <br>
+  {% endif %}
+  <div style='padding-top:30px'></div>
+  <a href='/review'>Kirjoita arvostelu</a>
+  <br>
   <h3>Ravintolat</h3>
   <ul>
     {% for restaurant in restaurants %}
     <li><a href=/restaurants/{{ restaurant.id }}>{{ restaurant.name }}</a></li>
     {% endfor %}
   </ul>
-  
-  <a href="/logout">Kirjaudu ulos</a>
   <br>
-  <a href='/review'>Tee arvio</a>
-  {% else %}
-  <a href='/login'>Kirjaudu sisään</a>
-  <br>
-  <a href='/signup'>Luo tunnus</a>
-  <br>
-  <a href='/review'>Tee arvio</a>
-  {% endif %}
+  <h3>Hae ravintoloita</h3>
+  <form action='/result' method='GET'>
+    Hakusana: <input type='text' name='query'>
+    <br>
+    <input type='submit' value='Hae'>
+  </form>
 </body>
 
 </html>
