added db resetting and dummydata for schema changes

--- a/templates/restaurant.html
+++ b/templates/restaurant.html
@@ -16,5 +16,6 @@
     <li>{{ item.title }}, {{ item.price }}e</li>
     {% endfor %}
   </ul>
+  <a href="/restaurants/reservation/{{ restaurant.id }}">Tee varaus</a>
 </body>
 </html>
