changed the structure of html files to take advantage of jinja

--- a/static/style.css
+++ b/static/style.css
@@ -14,3 +14,13 @@ form {
   justify-content: center;
   text-align: center;
 }
+
+footer {
+  position: absolute;
+  bottom: 0;
+}
+
+header a {
+  text-decoration: none;
+  color: black;
+}
