--- a/templates/restaurant.html
+++ b/templates/restaurant.html
@@ -1,28 +1,22 @@
-<!DOCTYPE html>
-<html lang='fi'>
-<head>
-  <meta charset='UTF-8'>
-  <meta name='viewport' content='width=device-width, initial-scale=1.0'>
-  <link rel='stylesheet' type='text/css' href='static/style.css'>
-  <title>{{ restaurant.name }}</title>
-</head>
-<body>
-  <a href='/'>Etusivu</a>
-  <h1>{{ restaurant.name }}</h1>
-  {{ restaurant.address }}
-  <h2>Menu</h2>
-  <ul>
-    {% for item in menu %}
-    <li>{{ item.title }}, {{ item.price }}e</li>
-    {% endfor %}
-  </ul>
-  <a href="/restaurants/reservation/{{ restaurant.id }}">Tee varaus</a>
-  <h3>Aukioloajat</h3>
-  {% for day in restaurant.openinghours %}
-  {% for part in day %}
-  {{ part }}
+{% extends 'base.html' %}
+
+{% block title %}{{ restaurant.name }}{% endblock %}
+
+{% block content %}
+<h1>{{ restaurant.name }}</h1>
+{{ restaurant.address }}
+<h2>Menu</h2>
+<ul>
+  {% for item in menu %}
+  <li>{{ item.title }}, {{ item.price }}e</li>
   {% endfor %}
-  <br>
-  {% endfor %}
-</body>
-</html>
+</ul>
+<a href="/restaurants/reservation/{{ restaurant.id }}">Tee varaus</a>
+<h3>Aukioloajat</h3>
+{% for day in restaurant.openinghours %}
+{% for part in day %}
+{{ part }}
+{% endfor %}
+<br>
+{% endfor %}
+{% endblock %}
