--- a/templates/result.html
+++ b/templates/result.html
@@ -1,18 +1,12 @@
-<!DOCTYPE html>
-<html lang='fi'>
-<head>
-  <meta charset='UTF-8'>
-  <meta name='viewport' content='width=device-width, initial-scale=1.0'>
-  <link rel='stylesheet' type='text/css' href='static/style.css'>
-  <title>Hakutulokset</title>
-</head>
-<body>
-  <a href='/'>Etusivu</a>
-  <h1>Hakutulokset</h1>
-  <ul>
-  {% for result in results %}
-    <li>{{ result.name }}</li>
-  {% endfor %}
-  </ul>
-</body>
-</html>
+{% extends 'base.html' %}
+
+{% block title %}Hakutulokset{% endblock %}
+
+{% block content}
+<h1>Hakutulokset</h1>
+<ul>
+{% for result in results %}
+  <li>{{ result.name }}</li>
+{% endfor %}
+</ul>
+{% endblock %}
