--- a/templates/review.html
+++ b/templates/review.html
@@ -1,41 +1,35 @@
-<!DOCTYPE html>
-<html lang='fi'>
-<head>
-  <meta charset='UTF-8'>
-  <meta name='viewport' content='width=device-width, initial-scale=1.0'>
-  <link rel='stylesheet' type='text/css' href='static/style.css'>
-  <title>Luo arvio</title>
-</head>
-<body>
-  <a href="/">Etusivu</a>
-  <h1>Arvioi ravintola</h1>
-  <form action='/review' method='POST'>
-    <label for="restaurant">Valitse ravintola:</label>
-    <select name="restaurant" id="restaurant">
-      {% for restaurant in restaurants %}
-      <option value="{{restaurant.id}}">{{restaurant.name}}</option>
-      {% endfor %}
-    </select>
-    <label for='stars'>Arvio:</label>
-    <br>
-    <span id='star-rating' class='star-rating'>
-      <input type='radio' name='stars' id='one' value=1>
-      <label for="one">1</label>
-      <input type='radio' name='stars' id='two' value=2>
-      <label for="two">2</label>
-      <input type='radio' name='stars' id='three' value=3>
-      <label for="three">3</label>
-      <input type='radio' name='stars' id='four' value=4>
-      <label for="four">4</label>
-      <input type='radio' name='stars' id='five' value=5>
-      <label for="five">5</label>
-    </span>
-    <br>
-    <label for='review-text'>Kirjoita arvio:</label>
-    <br>
-    <textarea name='review-text' id='review-text' cols='50' rows='12'></textarea>
-    <br>
-    <input type='submit' value='Lähetä'>
-  </form>
-</body>
-</html>
+{% extends 'base.html' %}
+
+{% block title %}Luo arvio{% endblock %}
+
+{% block content %}
+<h1>Arvioi ravintola</h1>
+<form action='/review' method='POST'>
+  <label for="restaurant">Valitse ravintola:</label>
+  <select name="restaurant" id="restaurant">
+    {% for restaurant in restaurants %}
+    <option value="{{restaurant.id}}">{{restaurant.name}}</option>
+    {% endfor %}
+  </select>
+  <label for='stars'>Arvio:</label>
+  <br>
+  <span id='star-rating' class='star-rating'>
+    <input type='radio' name='stars' id='one' value=1>
+    <label for="one">1</label>
+    <input type='radio' name='stars' id='two' value=2>
+    <label for="two">2</label>
+    <input type='radio' name='stars' id='three' value=3>
+    <label for="three">3</label>
+    <input type='radio' name='stars' id='four' value=4>
+    <label for="four">4</label>
+    <input type='radio' name='stars' id='five' value=5>
+    <label for="five">5</label>
+  </span>
+  <br>
+  <label for='review-text'>Kirjoita arvio:</label>
+  <br>
+  <textarea name='review-text' id='review-text' cols='50' rows='12'></textarea>
+  <br>
+  <input type='submit' value='Lähetä'>
+</form>
+{% endblock %}
