added reservation-making functionality

--- a/templates/base.html
+++ b/templates/base.html
@@ -6,7 +6,8 @@
   <link rel='stylesheet' type='text/css' href='static/style.css'>
   <link rel='stylesheet' type='text/css' href='../static/style.css'>
   <link rel='stylesheet' type='text/css' href='../../static/style.css'>
-  <title>{% block title %}{% endblock %}Varaa pöytä</title>
+  <link rel='stylesheet' type='text/css' href='../../../static/style.css'>
+  <title>{% block title %}Varaa pöytä{% endblock %} - Tsoha-projekti</title>
 </head>
 <body>
   {% include 'header.html' %}
