--- a/static/style.css
+++ b/static/style.css
@@ -2,6 +2,7 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
+  text-align: center;
 }
 
 input {
@@ -23,4 +24,12 @@ footer {
 header a {
   text-decoration: none;
   color: black;
+}
+
+.reservation_date_picker {
+  display: none;
+}
+
+.mon {
+  display: block;
 }
