--- a/templates/signup.html
+++ b/templates/signup.html
@@ -2,7 +2,7 @@
 
 {% block title %}Luo tunnus{% endblock %}
 
-{% block content}
+{% block content %}
 <h1>Luo käyttäjätunnus</h1>
 <form action='/signup' method='POST'>
   <label for="firstname">Etunimi:</label>
