--- a/templates/base.html
+++ b/templates/base.html
@@ -3,10 +3,7 @@
 <head>
   <meta charset='UTF-8'>
   <meta name='viewport' content='width=device-width, initial-scale=1.0'>
-  <link rel='stylesheet' type='text/css' href='static/style.css'>
-  <link rel='stylesheet' type='text/css' href='../static/style.css'>
-  <link rel='stylesheet' type='text/css' href='../../static/style.css'>
-  <link rel='stylesheet' type='text/css' href='../../../static/style.css'>
+  <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
   <title>{% block title %}Varaa pöytä{% endblock %} - Tsoha-projekti</title>
 </head>
 <body>
