--- a/templates/admin.html
+++ b/templates/admin.html
@@ -4,14 +4,40 @@
 
 {% block content %}
 <h2>Hallintapaneeli</h2>
-Anna käyttäjälle ravintolakäyttäjän oikeudet
-<form action='/setasrestaurant' method='POST'>
-  <select name='user' id='user'>
-    {% for user in users %}
-    <option value={{ user.id }}>{{ user.username }}</option>
-    {% endfor %}
-  </select>
-  <br>
-  <input type='submit' value='Vahvista'>
-</form>
+<section>
+  <p>Anna käyttäjälle ravintolakäyttäjän oikeudet</p>
+  <form action='/setasrestaurant' method='POST'>
+    <select name='user' id='user'>
+      {% for user in non_restaurant_users %}
+      <option value={{ user.id }}>{{ user.username }}</option>
+      {% endfor %}
+    </select>
+    <br>
+    <input type='submit' value='Vahvista'>
+  </form>
+</section>
+<section>
+  <p>Poista käyttäjä</p>
+  <form action='/deleteuser' method='POST'>
+    <select name='user' id='user'>
+      {% for user in users %}
+      <option value={{ user.id }}>{{ user.username }}</option>
+      {% endfor %}
+    </select>
+    <br>
+    <input type='submit' value='Vahvista'>
+  </form>
+</section>
+<section>
+  <p>Poista ravintola</p>
+  <form action='/deleterestaurant' method='POST'>
+    <select name='restaurant' id='restaurant'>
+      {% for restaurant in restaurants %}
+      <option value={{ restaurant.id }}>{{ restaurant.name }}</option>
+      {% endfor %}
+    </select>
+    <br>
+    <input type='submit' value='Vahvista'>
+  </form>
+</section>
 {% endblock %}
