--- a/templates/signup.html
+++ b/templates/signup.html
@@ -6,7 +6,7 @@
 <h1>Luo käyttäjätunnus</h1>
 <form action='/signup' method='POST'>
   <label for="firstname">Etunimi:</label>
-  <input type='text' name='firstname' placeholder='Etunimi' id='firstname' required>
+  <input type='text' name='firstname' placeholder='Etunimi' id='firstname' required autofocus>
   <br>
   <label for="lastname">Sukunimi:</label>
   <input type='text' name='lastname' placeholder='Sukunimi' id='lastname' required>
