--- a/templates/base.html
+++ b/templates/base.html
@@ -4,6 +4,9 @@
   <meta charset='UTF-8'>
   <meta name='viewport' content='width=device-width, initial-scale=1.0'>
   <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+Display:wght@300;400&display=swap" rel="stylesheet"> 
   <title>{% block title %}Varaa pöytä{% endblock %} - Tsoha-projekti</title>
 </head>
 <body>
