--- a/templates/login.html
+++ b/templates/login.html
@@ -6,10 +6,10 @@
 <h1>Kirjaudu sisään</h1>
 <form action='/login' method='POST'>
   <label for="username">Käyttäjätunnus:</label>
-  <input type='text' name='username' id='username'>
+  <input type='text' name='username' id='username' required autofocus>
   <br>
   <label for="password">Salasana:</label>
-  <input type="password" name='password' id='passsword'>
+  <input type="password" name='password' id='password' required>
   <br>
   <input type="submit" value='Kirjaudu'>
 </form>
