--- a/templates/review.html
+++ b/templates/review.html
@@ -32,6 +32,7 @@
     <textarea name='review-text' id='review-text' cols='50' rows='12'></textarea>
     <br>
     <input type='submit' value='Lähetä'>
+    <input type='hidden' name='csrf_token' value={{ session.csrf_token }}>
   </form>
 </section>
 {% endblock %}
