--- a/templates/restaurant.html
+++ b/templates/restaurant.html
@@ -5,10 +5,11 @@
 {% block content %}
 <h2>{{ restaurant.name }}</h2>
 <p>{{ restaurant.address }}</p>
-<h3>Menu</h3>
+<a href="/restaurants/reservation/{{ restaurant.id }}">Tee varaus</a>
+<h3>Menut</h3>
 <ul>
-  {% for item in menu %}
-  <li>{{ item.title }}, {{ item.price }}e</li>
+  {% for menu in menus %}
+  <li><a href='/restaurants/{{ menu.restaurant }}/menu/{{ menu.id }}'>{{ menu.name }}</a></li>
   {% endfor %}
 </ul>
 <h3>Aukioloajat</h3>
@@ -18,5 +19,4 @@
 {% endfor %}
 <br>
 {% endfor %}
-<a href="/restaurants/reservation/{{ restaurant.id }}">Tee varaus</a>
 {% endblock %}
